--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <webview
-    src="http://game.granbluefantasy.jp/"
+    src="http://game.granbluefantasy.jp/#mypage"
     autosize="on"
     preload="inject.js"
     allowpopups
